--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-flask
 python-telegram-bot
-requests
 dateparser
+google-api-python-client
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+# rebuild trigger
